# nlu-labs

./: .gitattributes  .gitignore  .gitmodules  01_corpus_and_lexicon.ipynb  02_experimental_methodology.ipynb  03_ngram_modeling.ipynb  04_sequence_labeling_pos(Solution).ipynb  04_sequence_labeling_pos.ipynb  05_grammars_constituency(Solution).ipynb  05_grammars_constituency.ipynb  06_grammars_dependency(Solutions) bak.ipynb  06_grammars_dependency(Solutions).ipynb  06_grammars_dependency.ipynb  07_shallow_parsing_ner(Solutions).ipynb  08_wsd(Solutions).ipynb  09_vector_semantics(Solutions).ipynb  10_sequence_nn.ipynb  pyproject.toml  requirements.txt  tp.model
LAB_01/: 01_corpus_and_lexicon(Solution).ipynb  functions.py  main.py
LAB_02/: functions.py  main.py
LAB_03/: functions.py  main.py
LAB_04/: functions.py  main.py
LAB_05/: functions.py  main.py
LAB_06/: 06_grammars_dependency(Solutions).ipynb  functions.py  main.py
LAB_07/: functions.py  main.py
LAB_08/: 08_wsd(Solutions).ipynb  functions.py  main.py
LAB_09/: 09_vector_semantics(Solutions).ipynb
LAB_09/part_1/: README.md  functions.py  main.py  model.py
LAB_09/part_2/: functions.py  main.py  model.py  utils.py
LAB_10/part_1/: README.md  functions.py  main.py  model.py  utils.py
LAB_10/part_2/: README.md  functions.py  main.py  model.py  utils.py
LAB_11/: 11_sentiment_analysis(solution).ipynb
labs/: 02_experimental_methodology.ipynb
notebooks/: 03_ngram_modeling(Solution).ipynb  08_wsd(Solutions).ipynb  09_vector_semantics(Solutions).ipynb  10_sequence_nn(Solutions).ipynb
(+5 files in other folders)
