[tool.poetry]
name = "nlu-labs"
version = "0.1.0"
description = ""
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>"]
readme = "README.md"
packages = [{include = "nlu_labs"}]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
spacy = "^3.5.2"
ipykernel = "^6.22.0"
scikit-learn = "^1.2.2"
spacy-conll = "^3.4.0"
pandas = "^2.0.1"
sklearn-crfsuite = "^0.3.6"
pcfg = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
